// Input Event
//
// The message is the Physics Event.
//
// Created by Samvel Khalatyan, Apr 19, 2011
// Copyright 2011, All rights reserved

import "Electron.proto";
import "GenParticle.proto";
import "Jet.proto";
import "Muon.proto";
import "MissingEnergy.proto";
import "PrimaryVertex.proto";
import "Trigger.proto";

package bsm;

message Event
{
    message Extra
    {
        optional uint32 id = 1;
        optional uint32 run = 2;
        optional uint32 lumi = 3;
    }

    repeated PrimaryVertex primary_vertices = 1;
    optional MissingEnergy missing_energy = 2;

    // PF Jets
    repeated Jet jets = 3;

    repeated Electron pf_electrons = 4;
    repeated Electron gsf_electrons = 5;

    repeated Muon pf_muons = 6;
    repeated Muon reco_muons = 7;

    repeated Trigger hlts = 8;

    repeated GenParticle gen_particles = 9;

    optional Extra extra = 10;
}
